# BOBuildSystem

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  README.md  discord.build-command-bot.Dockerfile  mypy.ini  pyproject.toml  ruff.toml  setup.ps1  setup.sh  task_scheduler.sh  tasks.scheduler.Dockerfile
.github/workflows/: cmake_build.yml  docker_build.yml  python_project.yml
bobuild/: __init__.py  autogui.py  bo_discord.py  config.py  git.py  hg.py  log.py  multiconfig.py  run.py  steamcmd.py  tasks.py  tasks_bo.py  typing_bo.py  utils.py  webadmin.py  win_server_service.py  workshop.py
bobuild/db/sql/: tasks.sql
bobuild/ps/: steamcmd.ps1
build_commands_bot/: CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
build_commands_bot/cmake/: dpp.cmake  uuid_v4.cmake
build_commands_bot/include/bobuild/: bobuild.hpp  redis_pool.hpp  taskiq.hpp  ucrt.hpp
build_commands_bot/src/: CMakeLists.txt  main.cpp  taskiq.hpp
build_commands_bot/vcpkg_ports/boost-process/: portfile.cmake  processv2.patch
docker/: build_commands_bot.sh  docker-compose.yml  redis.yaml  task_scheduler.sh
docker/apt_lists/: stable.list  testing.list
docker/discord-build-command-bot/: docker-compose.yml
docker/discord-gsm/: docker-compose.yml
docker/nginx/: docker-compose.yml
docker/postgres/: docker-compose.yml
docker/redis-stack/: docker-compose.yml
docker/task-scheduler/: docker-compose.yml
setup/: allow_rs2_server_firewall.ps1  install_docker.ps1  install_dx_redist.ps1  install_git.ps1  install_git_options.ini  install_packagetool.ps1  install_python.ps1  install_shadercachepatcher.ps1  install_steamcmd.ps1  install_steamguardcli.ps1  install_tortoisehg.ps1  install_vc_redist.ps1
workshop/: .gitignore  BOBetaMapTemplate.vdf  BOBetaTemplate.vdf  README.md
