[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "bobuild"
dynamic = ["version"]
description = "Build tools for Black Orchestra."
readme = "README.md"
requires-python = ">=3.11"
license-files = { paths = ["LICENSE"] }
keywords = []
authors = [
    { name = "Tuomo Kriikkula", email = "tuokri@tuta.io" },
    # { name = "Name2", email = "todo2@todo.todo" },
    # { name = "Name3", email = "todo3@todo.todo" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
]

dependencies = [
    "Pillow==11.1.0",
    "aiohttp[speedups]==3.11.11",
    "audioop-lts==0.2.1", # NEEDED BY DISCORD FOR PY 3.13!
    "boltons==24.1.0",
    "certifi==2024.12.14",
    "discord.py==2.4.0",
    "hachiko @ git+https://git@github.com/tuokri/hachiko",
    "httpx==0.28.1",
    "loguru==0.7.3",
    "psutil==6.1.1",
    "taskiq-pg==0.1.2",
    "taskiq-redis==1.0.2",
    "taskiq[orjson]==0.11.10",
    "tqdm==4.67.1",
    "ujson==5.10.0",
    "uvloop==0.21.0; platform_system != 'Windows'",
    "vdf==3.4",
    "winloop==0.1.7; platform_system == 'Windows'",
]
[project.optional-dependencies]
dev = [
    "hatch",
    "mypy",
    "ruff",
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "bobuild/_version.py"

[tool.hatch.metadata]
allow-direct-references = true
