[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "bobuild"
dynamic = ["version"]
description = "Build tools for Black Orchestra."
readme = "README.md"
requires-python = ">=3.13"
license-files = { paths = ["LICENSE"] }
keywords = []
authors = [
    { name = "Tuomo Kriikkula", email = "tuokri@tuta.io" },
    # { name = "Name2", email = "todo2@todo.todo" },
    # { name = "Name3", email = "todo3@todo.todo" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    # "Programming Language :: Python :: 3.11",
    # "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
]

dependencies = [
    "Pillow==11.1.0",
    "PyAutoGUI==0.9.54",
    "aiohttp[speedups]==3.11.11",
    "asyncpg==0.30.0",
    "audioop-lts==0.2.1; python_version >= '3.13'", # Needed by discord.py.
    "beautifulsoup4==4.12.3",
    "boltons==24.1.0",
    "certifi==2024.12.14",
    "discord.py==2.4.0",
    "hachiko @ git+https://git@github.com/tuokri/hachiko",
    "httpx==0.28.1",
    "loguru==0.7.3",
    "opencv-python==4.11.0.86",
    "orjson==3.10.15",
    "psutil==6.1.1",
    "pywin32==308; platform_system == 'Windows'",
    "taskiq-pg==0.1.3",
    "taskiq-redis==1.0.2",
    "taskiq==0.11.10",
    "tqdm==4.67.1",
    "ujson==5.10.0",
    "uvloop==0.21.0; platform_system != 'Windows'",
    "vdf==3.4",
    "winloop==0.1.8; platform_system == 'Windows'",
]
[project.optional-dependencies]
dev = [
    "hatch",
    "isort",
    "mypy",
    "ruff",
    "types-PyAutoGUI",
    "types-beautifulsoup4",
    "types-psutil",
    "types-pywin32",
    "types-tqdm",
    "types-ujson",
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "bobuild/_version.py"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.envs.test]
dependencies = [
    "hatch",
    "isort",
    "mypy",
    "ruff",
    "types-PyAutoGUI",
    "types-beautifulsoup4",
    "types-psutil",
    "types-pywin32",
    "types-tqdm",
    "types-ujson",
]

[tool.hatch.envs.test.scripts]
run_mypy = "mypy --show-error-codes ."
run_ruff = "ruff check ."
run_isort = "isort --check-only ."

[tool.isort]
case_sensitive = true
force_single_line = true
group_by_package = true
lexicographical = false
order_by_type = false
extend_skip = [
    "_version.py"
]

[tool.mypy]
exclude = [
    "submodules/",
    "build_commands_bot/",
]

# https://github.com/MagicStack/asyncpg/pull/577
# https://github.com/MagicStack/asyncpg/issues/387
[[tool.mypy.overrides]]
module = [
    "asyncpg.*",
    "boltons.*",
    "pygetwindow.*",
    "vdf.*",
]
ignore_missing_imports = true
